sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:8: error: value *- is not a member of Int
      for(j<- i to 0) yield 1*-1
                             ^AlgInsertionSort:9: error: Int(1) does not take parameters
      {
      ^